# Tauri-Eframe-Native-App-Toolkit

./: .gitignore  Cargo.toml  LICENSE  README  README.md  add_project_structure.py  create_project_structure.py  plugins.txt  tree
Action/: Documentation   Todo List
app_core/: Cargo.toml
app_core/src/: app.rs  lib.rs  libCURrs  message_bus.rs  message_handler.rs  message_priority.rs  message_system.rs  messages.rs  my_concrete_filter.rs  plugin_system.rs  priority_message_handler.rs  sys_filters.rs  ui.rs
app_main/: Cargo.toml
app_main/src/: lib.rs  libXrs  main.rs
egui_impl/: Cargo.toml
egui_impl/src/: components.rs  lib.rs
egui_impl/src/components/: frame.rs  window.rs
plugins/ui_control/: Cargo.toml
plugins/ui_control/src/: lib.rs  ui_controller_plugin.rs  ui_controller_plugin.rs_OLD  ui_view_plugin.rs  ui_view_plugin_CUR1rs
plugins/ui_controller/: Cargo.toml  ui_controller_plugin.rs
plugins/ui_controller/src/: lib.rs
plugins/window_management/: Cargo.toml
plugins/window_management/src/: lib.rs  window_controller_messages.rs  window_controller_plugin vecvrs  window_controller_plugin.rs  window_controller_plugin.rs_OLD  window_controller_plugin_CUR2.rs  window_controller_plugin_CUR3.rs  window_controller_plugin_CUR4_AnyVarrs  window_plugin.rs  window_plugin_CUR1rs  window_plugin_CUR2rs
src/: Cargo.toml  lib.rs  libxrs  main.rs
src-tauri/: Cargo copytoml  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/genX/schemas/: capabilities.json
src-tauri/src/: about_window_plugin-rs  lib.rs  main simple-rs  main.rs  plugins.rs
src-tauri/src/plugins/: WindowControllerPlugin-v2.rs
src-tauri/src/plugins/about_window/: about_window_plugin-simplers  about_window_plugin.rs  mod.rs
src-tauri/src/plugins/ui_controller/: mod.rs  ui_controller_plugin.rs
src-tauri/src/plugins/window_management/: mod.rs  window_controller_plugin.rs  window_plugin.rs
uiX/: traitsXrs
