[package]
name = "app_core"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
libloading = "0.7"


serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#log = "0.4"
#fern = "0.6"
#chrono = "0.4"

serde_json = "1.0"
crossbeam-channel = "0.5"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }