[package]
name = "egui_impl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app_core = { path = "../app_core" }
eframe = { workspace = true }
egui = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }