[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Andrew Kalonga"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
tauri = { version = "2.0.0-beta.24", features = [] }
egui = "0.15"  # or the latest version
eframe = "0.28.1"  # or the latest version
image = "0.25.2"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }
