[package]
name = "app"
version = "0.1.1"
description = "A Tauri App built with the window_management App Toolkit"
authors = ["Andrew Kalonga"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

#exclude = ["plugins/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
egui = "0.29.1"  # or the latest version
eframe = "0.29.1"  # or the latest version
image = "0.25.2"
libloading = "0.8.5"

serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#log = "0.4"
#fern = "0.6"
#chrono = "0.4"

serde_json = "1.0"
crossbeam-channel = "0.5"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }
