[package]
name = "window_management"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
app_core = { path = "../../app_core" }
eframe = { workspace = true }
egui = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3.11"
egui_impl = { path = "../../egui_impl" }

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }